<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.trung.kotlinexample.viewmodel.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        tools:context="com.trung.kotlinexample.com.trung.kotlinexample.activity.LoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/img_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_40sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20dp"
                    android:text="@string/app_description"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="@dimen/margin_10dp">

            <EditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:text="diasl@outlook.com"
                android:imeOptions="actionNext"
                android:singleLine="true" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_5dp"
                android:hint="@string/password"
                android:text="password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:singleLine="true" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp"
                android:enabled="@{loginViewModel.isEnableButton}"
                android:text="@string/sign_in" />
        </LinearLayout>

    </LinearLayout>

</layout>
